added Upload ArtworkPhoto feature

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+
 # datasource PostgreSQl
 spring.sql.init.platform=postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/scheveschilderportaal
@@ -23,3 +24,9 @@ spring.jpa.defer-datasource-initialization=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 spring.output.ansi.enabled = always
+
+# Location of files uploaded
+my.upload_location= uploads
+# Maximum of 7mb per file
+spring.servlet.multipart.max-file-size=7MB
+spring.servlet.multipart.max-request-size=7MB
