working on the email forgot password feature

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,3 +30,18 @@ my.upload_location= uploads
 # Maximum of 7mb per file
 spring.servlet.multipart.max-file-size=7MB
 spring.servlet.multipart.max-request-size=7MB
+
+
+# --- Email Configuration ---
+# Your SMTP server host (e.g., smtp.gmail.com for Gmail)
+spring.mail.host=smtp.example.com
+# Your SMTP server port (e.g., 587 for TLS)
+spring.mail.port=587
+# The username for your email account
+spring.mail.username=${EMAIL_USERNAME}
+# The password for your email account. Use an environment variable!
+spring.mail.password=${EMAIL_PASSWORD}
+
+# --- Protocol Properties ---
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
