fixed the feature

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,16 +32,18 @@ spring.servlet.multipart.max-file-size=7MB
 spring.servlet.multipart.max-request-size=7MB
 
 
-# --- Email Configuration ---
-# Your SMTP server host (e.g., smtp.gmail.com for Gmail)
-spring.mail.host=smtp.example.com
-# Your SMTP server port (e.g., 587 for TLS)
-spring.mail.port=587
-# The username for your email account
+# --- Email Configuration for Hosting.nl (Port 587 with Full Debugging) ---
+spring.mail.host=mail.scheveschilder.nl
+spring.mail.port=465
 spring.mail.username=${EMAIL_USERNAME}
-# The password for your email account. Use an environment variable!
 spring.mail.password=${EMAIL_PASSWORD}
 
-# --- Protocol Properties ---
 spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.ssl.enable=true
+spring.mail.properties.mail.transport.protocol=smtp
+
+spring.mail.properties.mail.smtp.ssl.checkserveridentity=false
+
+# --- Debugging and Timeout Properties ---
+# This will print the full SMTP communication to the console log. This is the most important line.
+spring.mail.properties.mail.debug=true
