changed and set JWT 64Basecode key to local env

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -51,4 +51,5 @@ spring.mail.properties.mail.smtp.ssl.checkserveridentity=false
 spring.mail.properties.mail.debug=false
 # ---  Set to false for production ---
 
-
+# --- JWT Configuration ---
+jwt.secret=${JWT_SECRET_KEY}
